# blakefish

./: CMakeLists.txt  README.md  bitboards.c  bitboards.h  blakefish  eval.c  eval.h  eval_constants.c  eval_constants.h  game_tree.c  game_tree.h  gameboard.h  magic.c  main.c  movegen.c  movegen.h
src/: CMakeLists.txt  bitboards.h  eval.h  eval_constants.h  game_tree.c  game_tree.h  gameboard.c  gameboard.h  magic.h  main.c  movegen.c  movegen.h
testing/: .gitignore  CMakeLists.txt  test_movegen.cpp
